--- a/connect.yaml
+++ b/connect.yaml
@@ -5,8 +5,8 @@ deployAs:
     applicationType: service
     endpoint: /service
     scripts:
-      postDeploy: npm install && npm run connector:post-deploy
-      preUndeploy: npm install && npm run connector:pre-undeploy
+      postDeploy: yarn install && yarn run connector:post-deploy
+      preUndeploy: yarn install && yarn run connector:pre-undeploy
     configuration:
       standardConfiguration:
         - key: CTP_REGION
@@ -54,8 +54,8 @@ deployAs:
     applicationType: event
     endpoint: /event
     scripts:
-      postDeploy: npm install && npm run connector:post-deploy
-      preUndeploy: npm install && npm run connector:pre-undeploy
+      postDeploy: yarn install && yarn run connector:post-deploy
+      preUndeploy: yarn install && yarn run connector:pre-undeploy
     configuration:
       standardConfiguration:
         - key: CTP_REGION
