--- a/event/package.json
+++ b/event/package.json
@@ -22,7 +22,8 @@
     "eslint": "^8.46.0",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.1"
+    "prettier": "^3.0.1",
+    "supertest": "^7.0.0"
   },
   "dependencies": {
     "@commercetools-backend/loggers": "^21.19.0",
