--- a/connect.yaml
+++ b/connect.yaml
@@ -1,6 +1,4 @@
 deployAs:
-  - name: assets
-    applicationType: assets
   - name: service
     applicationType: service
     endpoint: /service
@@ -9,47 +7,47 @@ deployAs:
       preUndeploy: npm install && npm run connector:pre-undeploy
     configuration:
       standardConfiguration:
-        - key: CTP_REGION
-          description: commercetools Composable Commerce API region
-          required: true
-          default: "europe-west1.gcp"
-      securedConfiguration:
         - key: CTP_PROJECT_KEY
-          description: commercetools Composable Commerce project key
+          description: Project key of the commercetools Composable Commerce Project
           required: true
+          default: 'connector_test'
+        - key: CTP_REGION
+          description: Region where the Composable Commerce Project is hosted
+          required: true
+          default: 'europe-west1.gcp'
+      securedConfiguration:
         - key: CTP_CLIENT_ID
-          description: commercetools Composable Commerce client ID
+          description: client_id of an API Client for the Composable Commerce Project
           required: true
         - key: CTP_CLIENT_SECRET
-          description: commercetools Composable Commerce client secret
+          description: secret of an API Client for the Composable Commerce Project
           required: true
         - key: CTP_SCOPE
-          description: commercetools Composable Commerce client scope
-          required: true
+          description: scope of an API Client for the Composable Commerce Project
   - name: job
     applicationType: job
     endpoint: /job
     properties:
-      schedule: "0 0 * * *"
+      schedule: '*/5 * * * *'
     configuration:
       standardConfiguration:
-        - key: CTP_REGION
-          description: commercetools Composable Commerce API region
-          required: true
-          default: "europe-west1.gcp"
-      securedConfiguration:
         - key: CTP_PROJECT_KEY
-          description: commercetools Composable Commerce project key
+          description: Project key of the Composable Commerce Project
           required: true
+          default: 'connector_test'
+        - key: CTP_REGION
+          description: Region where the Composable Commerce Project is hosted
+          required: true
+          default: 'europe-west1.gcp'
+      securedConfiguration:
         - key: CTP_CLIENT_ID
-          description: commercetools Composable Commerce client ID
+          description: client_id of an API Client for the Composable Commerce Project
           required: true
         - key: CTP_CLIENT_SECRET
-          description: commercetools Composable Commerce client secret
+          description: secret of an API Client for the Composable Commerce Project
           required: true
         - key: CTP_SCOPE
-          description: commercetools Composable Commerce client scope
-          required: true
+          description: scope of an API Client for the Composable Commerce Project
   - name: event
     applicationType: event
     endpoint: /event
@@ -58,43 +56,45 @@ deployAs:
       preUndeploy: npm install && npm run connector:pre-undeploy
     configuration:
       standardConfiguration:
-        - key: CTP_REGION
-          description: commercetools Composable Commerce API region
-          required: true
-          default: "europe-west1.gcp"
-      securedConfiguration:
         - key: CTP_PROJECT_KEY
-          description: commercetools Composable Commerce project key
+          description: Project key of the Composable Commerce Project
           required: true
+          default: 'connector_test'
+        - key: CTP_REGION
+          description: Region where the Composable Commerce Project is hosted
+          required: true
+          default: 'europe-west1.gcp'
+      securedConfiguration:
         - key: CTP_CLIENT_ID
-          description: commercetools Composable Commerce client ID
+          description: client_id of an API Client for the Composable Commerce Project
           required: true
         - key: CTP_CLIENT_SECRET
-          description: commercetools Composable Commerce client secret
+          description: secret of an API Client for the Composable Commerce Project
           required: true
         - key: CTP_SCOPE
-          description: commercetools Composable Commerce client scope
+          description: scope of an API Client for the Composable Commerce Project
+  - name: merchant-center-custom-application
+    applicationType: merchant-center-custom-application
+    configuration:
+      standardConfiguration:
+        - key: CUSTOM_APPLICATION_ID
+          description: The Custom Application ID
           required: true
-  # - name: merchant-center-custom-application
-  #   applicationType: merchant-center-custom-application
-  #   configuration:
-  #     standardConfiguration:
-  #       - key: CUSTOM_APPLICATION_ID
-  #         description: The Custom Application ID is provided when you add a Custom Application in the Merchant Center
-  #         required: true
-  #       - key: CLOUD_IDENTIFIER
-  #         description: The identifier of the cloud Region that the Custom Application uses to connect to Composable Commerce. The values map to the actual Merchant Center API URL for that Region
-  #         default: 'gcp-eu'
-  #       - key: ENTRY_POINT_URI_PATH
-  #         description: The Application entry point URI path identified during registration of Custom Application
-  #         required: true
+        - key: CLOUD_IDENTIFIER
+          description: The cloud identifier
+          default: 'gcp-eu'
+        - key: ENTRY_POINT_URI_PATH
+          description: The Application entry point URI path
+          required: true
+  - name: assets
+    applicationType: assets
 inheritAs:
   configuration:
     securedConfiguration:
       - key: GLOBAL_SECURED_CONFIGURATION
-        description: This secured configuration will be applied to all applications
+        description: Secured configuration that is applied to all applications
         required: true
     standardConfiguration:
       - key: GLOBAL_STANDARD_CONFIGURATION
-        description: This standard configuration will be applied to all applications
+        description: Standard configuration that is applied to all applications
         required: true
