--- a/service/.env.example
+++ b/service/.env.example
@@ -1,5 +1,6 @@
-CTP_CLIENT_ID=
-CTP_CLIENT_SECRET=
-CTP_PROJECT_KEY=
-CTP_SCOPE=
-CTP_REGION=
+CTP_CLIENT_ID=ECm4lQW2rXzVcRq4Ur4s8ifZ
+CTP_CLIENT_SECRET=VrMLjn2y4svn5dqUJ2GY2ErtrA-mZAX0
+CTP_PROJECT_KEY=connector_test
+CTP_SCOPE=manage_project:connector_test
+CTP_API_URL=https://api.europe-west1.gcp.commercetools.com
+CTP_AUTH_URL=https://auth.europe-west1.gcp.commercetools.com
